fixed festival cards misalignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -255,7 +255,7 @@ i { margin-right: 3px; }
 .festival_card {
   border-radius: 8px;
   box-shadow: 1px 1px 5px #333333;
-  height: 300px;
+  height: 350px;
   margin-bottom: 15px;
   margin-left: 20px;
   margin-right: 20px;
@@ -449,4 +449,10 @@ i { margin-right: 3px; }
   font-size: 16px;
   color: #eeeeee;
   text-align: center;
+}
+
+.festival-row {
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
