--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -8,6 +8,7 @@
 
 #nav {
   width: 100%;
+  white-space: nowrap;
 }
 
 #nav .pure-menu-link:hover {
